[package]
name = "siteloc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["cargo", "derive"] }
reqwest = { version = "0.11.24", features = ["blocking", "gzip"] }
robotstxt = "0.3.0"
sitemap = "0.4.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.0"
