[package]
name = "wls"
version = "0.1.0"
edition = "2021"

authors = ["Joel Koen <mail@joelkoen.com>"]
license = "MIT"
description = "Easily crawl multiple sitemaps and list URLs"
readme = "README.md"
repository = "https://github.com/joelkoen/wls"
keywords = ["crawler", "sitemap", "url"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["cargo", "derive"] }
color-eyre = { version = "0.6.2", features = ["capture-spantrace"] }
robotstxt = "0.3.0"
sitemap = "0.4.1"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = "0.3.18"
ureq = { version = "2.9.5", features = ["charset"] }
url = "2.5.0"
