[package]
name = "wls"
version = "0.2.0"
edition = "2021"

authors = ["Joel Koen <mail@joelkoen.com>"]
license = "MIT"
description = "Easily crawl multiple sitemaps and list URLs"
readme = "README.md"
repository = "https://github.com/joelkoen/wls"
keywords = ["crawler", "sitemap", "url"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["cargo", "derive"] }
color-eyre = { version = "0.6.2", features = ["capture-spantrace"] }
reqwest = { version = "0.12.4", features = ["gzip", "blocking", "cookies"] }
robotstxt = "0.3.0"
sitemap = "0.4.1"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = "0.3.18"
url = "2.5.0"
